# DataSacCore

./: .dockerignore  .env.example  .gitignore  ANALYTIC.md  CAMBIOS_AUTH.md  Dockerfile  PRUEBA_LOCAL.md  README.md  SituacionCrediticia.json  compose.yaml  ejemplo.txt  pyproject.toml  requirements.prod.txt  requirements.txt
.github/workflows/: docker-publish.yml
app/: main.py
app/core/: settings.py
app/db/: base.py  mongo.py  redis.py  session.py
app/models/: __init__.py
app/models/activofijo/: activo_fijo_constatacion_fisica_model.py  activo_model.py  activo_responsable_model.py  (+8 more)
app/routers/: health.py
docs/: analytic-sac-admin-api.md  asesores-comparacion-control-central.md  calidad-de-activos-historicos.md  colocacion-historico.md  guia-frontend-recuperacion.md  indicadores-de-eficiencia-historicos.md  indicadores-liquidez-historico.md  morosidad-historica.md  primer-paso-universo-prestamos.md  recuperacion-historico.md  rentabilidad-historicos.md  solvencia-historicos.md  universo-prestamos-negocios-cobranza-mongo.md  valores-calculables-python-universo-prestamos.md
procedures/: fuente1.sql  pbi_colocacion.sql  recuperacion.sql
tests/: test_analytic_menu_repository.py  test_auth.py  test_calidad_de_activos_historicos.py  test_colocacion_historico.py  test_indicadores_de_eficiencia_historicos.py  test_indicadores_de_liquidez.py  test_main.py  test_morosidad_historica.py  test_nomina_cargos.py  test_prestamos_mongo_universo.py  test_prestamos_router.py  test_prestamos_sql_repository.py  test_prestamos_universo.py  test_recuperacion_historico.py  test_rentabilidad_historicos.py  test_seguridad_roles.py  test_solvencia_historicos.py
(+265 files in other folders)
