[project]
name = "datasac-core"
version = "0.1.0"
description = "API Core de DataSac."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.115.0,<1.0.0",
    "pyodbc>=5.2.0,<6.0.0",
    "PyJWT>=2.10.0,<3.0.0",
    "pymongo>=4.13.0,<5.0.0",
    "redis>=5.0.0,<7.0.0",
    "python-dotenv>=1.1.0,<2.0.0",
    "SQLAlchemy>=2.0.40,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
]

[tool.fastapi]
entrypoint = "app.main:app"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
